--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   go_router: ^10.1.2
   asp: ^1.3.0
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.9.1
+  get_it: ^7.6.4
+  either_dart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
