--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.9.1
   get_it: ^7.6.4
   either_dart: ^1.0.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
