--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^7.6.4
   either_dart: ^1.0.0
   uuid: ^4.0.0
+  firebase_auth: ^4.10.0
 
 dev_dependencies:
   flutter_test:
