--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   either_dart: ^1.0.0
   uuid: ^4.0.0
   firebase_auth: ^4.10.0
+  mask_text_input_formatter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
